# http-server

./: .gitignore  CMakeLists.txt  Server.toml  index.html
include/: DependencyManager.hpp  EnumHelper.hpp  HttpCallback.hpp  HttpConnection.hpp  HttpController.hpp  HttpErrorManager.hpp  HttpFilterManager.hpp  HttpHelper.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpRouter.hpp  HttpServer.hpp  HttpTypeManager.hpp  fileGetters.hpp
include/Base/: DependencyManager.hpp  HttpConnection.hpp  HttpController.hpp  HttpServer.hpp
include/Routes/: Filters.hpp  HttpCallback.hpp  HttpErrorManager.hpp  HttpFilterManager.hpp  HttpRequest.hpp  HttpResponse.hpp  HttpRouter.hpp
include/Util/: HttpUtil.hpp  Message.hpp
resources/: index.html
resources/lang/en/: index.json
resources/lang/pt/: index.json
resources/scripts/: translate.js
resources/styles/: styles.css
resources/templates/: error.html  hello.html
src/: Filters.cpp  HttpConnection.cpp  HttpController.cpp  HttpErrorManager.cpp  HttpFilterManager.cpp  HttpResponse.cpp  HttpRouter.cpp  HttpServer.cpp  fileGetters.cpp  main.cpp
src/Base/: HttpConnection.cpp  HttpController.cpp  HttpServer.cpp
src/Routes/: Filters.cpp  HttpErrorManager.cpp  HttpFilterManager.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpRouter.cpp
src/TestLegacy/: example.cpp  router_test.cpp
src/Util/: HttpUtil.cpp
